fix images not responsive

--- a/minitweet_app/static/css/main.css
+++ b/minitweet_app/static/css/main.css
@@ -146,6 +146,11 @@ form{
     padding-top: 10px;
 }
 
+.post-body img{
+    width: 100%;
+    max-width: 500px;
+    padding: 10px;
+}
 
 .string-field{
     margin-top: 10px;
